# seashell

./: .gitignore  Cargo.toml  README.md  app.tsx  eslint.config.mjs  flake.nix  package-lock.json  package.json  status_notifier_watcher.rs  style.scss
.zed/: tasks.json
dbus_connections/: Cargo.toml
dbus_connections/src/: lib.rs
dbus_tray/: Cargo.toml
dbus_tray/src/: dbus.rs  lib.rs  menumodel.rs
dbus_upower/: Cargo.toml
dbus_upower/src/: dbus.rs  lib.rs
seashell/: Cargo.toml  build.rs
seashell/src/: main.rs  monitors.rs
seashell/src/style/: battery.scss  main.scss  menu_button.scss  power_profile_selector.scss  tray.scss
seashell/src/widgets/: auto_hide.rs  bar.rs  battery.rs  clock.rs  menu_button.rs  mod.rs  power_profile_selector.rs  tray.rs
src/: app.tsx  main.rs  style.scss
src/bar/: Bar.tsx  BarWidget.tsx  DropdownButton.tsx  HideController.tsx
src/bar/menus/: DropdownMenu.tsx
src/bar/widgets/: Battery.tsx  Clock.tsx  Lang.tsx  Tray.tsx
src/menu/: Menu.tsx
src/tray/: dbus.rs  menumodel.rs  mod.rs
widget/: Bar.tsx  BarComponent.tsx  BarWidget.tsx  Battery.tsx  Clock.tsx  HideController.tsx  Lang.tsx  Menu.tsx  util.ts
