[workspace]
members = [
    "seashell",
    "dbus_connections",
    "dbus_tray",
    "dbus_upower"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
dbus_tray = { path = "./dbus_tray" }
dbus_connections = { path = "./dbus_connections" }

log = "0.4.20"
env_logger = "0.11.1"
anyhow = "1.0.99"
futures = "0.3.31"
async-channel = "2.5.0"
async-once-cell = "0.5.4"
serde = "1.0.225"
zbus = { version = "5.11.0", default-features = false, features = [ "async-io" ] }
gtk = { package = "gtk4", version = "0.10.1", features = [ "v4_18", "blueprint" ] }
glib = "0.21.2"
gio = "0.21.2"
gdk = { package = "gdk4", version = "0.10.1", features= [ "v4_18" ] }
gtk4-layer-shell = "0.6.3"
grass = "0.13.4"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Disable some useless or opinionated pedantic warnings
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
enum_glob_use = "allow"
enum_variant_names = "allow"
explicit_deref_methods = "allow"
large_digit_groups = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
new_without_default = "allow"
redundant_else = "allow"
struct_field_names = "allow"
unused_self = "allow"
used_underscore_binding = "allow" # Broken

# Prevent panicing
exit = "warn"
expect_used = "warn"
get_unwrap = "warn"
indexing_slicing = "warn"
panic = "warn"
string_slice = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_used = "warn"


[workspace.metadata.crane]
name = "seashell-workspace"
