[package]
name = "dbus_tray"
version.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-once-cell = { workspace = true }
serde = { workspace = true }
zbus = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
gdk = { workspace = true }
