[package]
name = "dbus_tray"
version.workspace = true
edition.workspace = true

[dependencies]
dbus_connections = { workspace = true }

log = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
zbus = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
gdk = { workspace = true }

[lints]
workspace = true
