[package]
name = "seashell"
version.workspace = true
edition.workspace = true

[dependencies]
dbus_tray = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-channel = { workspace = true }
gtk = { workspace = true }
gdk = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
gtk4-layer-shell = { workspace = true }

[build-dependencies]
grass = { workspace = true }

[lints]
workspace = true
